# rpi_embedded

./: Cargo.toml  README.md  RPPAL_LINKS.md  RPPAL_LINKS.save
examples/: adxl345.rs  flshy_pin.rs  gpio_blinkled.rs  gpio_blinkled_signals.rs  gpio_input.rs  gpio_servo_softpwm.rs  gpio_status.rs  i2c_basics.rs  i2c_ds3231.rs  pwm_blinkled.rs  pwm_servo.rs  spi_25aa1024.rs  uart_blocking_read.rs  uart_simplified.rs
src/: adxl.rs  gpio.rs  i2c.rs  lib.rs  servo.rs  uart.rs
