[package]
name = "rpi_embedded"
version = "0.1.0" # Also update html_root_url in lib.rs
edition = "2018"
authors = ["Kjartan Bjarmi Arnason Klein <kjartanbklein@gmail.com>"]
description = "Interface for the Raspberry Pi's GPIO, I2C, PWM, SPI and UART peripherals. Forked from RPPAL"
documentation = "https://docs.rs/rpi_embedded"
repository = "https://github.com/KjartanKlein/rpi_embedded"
readme = "README.md"
license = "MIT"
categories = ["embedded", "hardware-support"]
keywords = ["raspberry", "pi", "embedded-hal", "embedded-hal-impl", "hal"]

[dependencies]
libc = "0.2.50"
lazy_static = "1.3.0"
nb = { version = "0.1.1", optional = true }
embedded-hal = { version = "0.2.3", optional = true }
void = { version = "1.0.2", optional = true }

[dev-dependencies]
simple-signal = "1.1.1"

[features]
default = []
